Use updated set assretions